--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -23,17 +23,32 @@
 
 		<div class="container">
 
-			<!-- Header
+			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
-
-			<div class="header">
+			<div class="header-desktop">
 				<ul class="header-content flex-header">
 					<li>Brock Donaldson</li>
-					<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title"></span><span class="song-artist"></span></a></li>
+					</div>
 				</ul>
 			</div>
+
+			<!-- Header (Mobile)
+			––––––––––––––––––––––––––––––-->
+				<div class="header-mobile">
+				<ul class="header-content flex-header">
+					<li>Brock Donaldson</li>
+					<div class="social">
+						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+					</div>
+				</ul>
+			</div>
+
+
 
 			<!-- Project Header
 			––––––––––––––––––––––––––––––-->
@@ -96,7 +111,7 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech  flex-sb">
-						<div class="pull-tech-text">
+						<div class="pull-tech-text charcoal">
 							<h2> While foldability allows for a more portable solution, it’s also meant to build a strong user/product relationship. </h2>
 						</div>
 						<div class="pull-tech-drawing">
@@ -220,7 +235,7 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text">
+						<div class="pull-tech-text charcoal">
 							<h2> Folding allows for ease of portability while at the same time helps create a stronger user & product relationship. </h2>
 						</div>
 						<div class="pull-tech-drawing">
@@ -247,9 +262,10 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text white">
-							<h2> The companion app allows users to track ride stastitics in real time using installed hardware in the board.  </h2>
-							<h4> View Case Study </h4>
+						<div class="cto-text white">
+							<h2>The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2>
+
+							<h4>View Case Study</h4>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneAppCTO.svg"> Kitsune App CTO </object>
@@ -262,14 +278,6 @@
 
 		</div>
 
-<<<<<<< HEAD
-		  <div class="footer">
-			<ul class="footer-content flex-sb">
-				<li><h5>Brock Donaldson © 2017</h5></li>
-				<li><h5><em>Despite knowing the journey and where it leads, I embrace it, and I welcome every moment of it.</em></h5></li>
-			</ul>
-		</div>
-=======
 		<div class="footer-container">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
@@ -278,7 +286,6 @@
 				</ul>
 			</div>
 			</div>
->>>>>>> skateboard-parallax
 
 	</div>
 
