--- a/index.html
+++ b/index.html
@@ -20,17 +20,32 @@
 
 		<div class="container">
 
-			<!-- Header
+					<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
-
-			<div class="header">
-				<ul class="header-content flex-center">
+			<div class="header-desktop">
+				<ul class="header-content flex-header">
 					<li>Brock Donaldson</li>
-					<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					<li><span class="song-title">Fantasy</span><span class="song-artist"> – Mariah Carey</span></li>
+					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title"></span><span class="song-artist"></span></a></li>
+					</div>
 				</ul>
 			</div>
+
+			<!-- Header (Mobile)
+			––––––––––––––––––––––––––––––-->
+				<div class="header-mobile">
+				<ul class="header-content flex-header">
+					<li>Brock Donaldson</li>
+					<div class="social">
+						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+					</div>
+				</ul>
+			</div>
+
+
 
 			<!-- Intro
 			––––––––––––––––––––––––––––––-->
