--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -30,7 +30,7 @@
 					<li>Brock Donaldson</li>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title"></span><span class="song-artist"></span></a></li>
+					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" maxlength="30"></span><span class="song-artist"></span></a></li>
 					</div>
 				</ul>
 			</div>
@@ -299,7 +299,6 @@
   $.getJSON(url, function(data) {
     var artist = data.recenttracks.track[0].artist["#text"];
     var song = data.recenttracks.track[0]["name"];
-    var cover = data.recenttracks.track[0].image[3]["#text"];
 
     $('.song-title').html(""+song+" \ ");
     $('.song-artist').html("– " +artist+"\ ");
