--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -78,6 +78,7 @@
 			<div class="section-full flex-center">
 				<div class="medium-container">
 					<img class="skateboard-render" src="images/parallax/brock_v1_01.png" alt="Skateboard Render">
+					<img class="skateboard-render-static" src="images/parallax/brock_v1_01.png" alt="Skateboard Render">
 				</div>
 			</div>
 
@@ -264,7 +265,6 @@
 					<div class="pull-tech flex-sb">
 						<div class="cto-text white">
 							<h2>The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2>
-
 							<h4>View Case Study</h4>
 						</div>
 						<div class="pull-tech-drawing">
@@ -273,6 +273,7 @@
 					</div>
 				</div>
 			</div>
+
 
 
 
@@ -285,7 +286,14 @@
 					<li><h5><em>Despite knowing the journey and where it leads, I embrace it, and I welcome every moment of it.</em></h5></li>
 				</ul>
 			</div>
+		</div>
+
+		<div class="footer-container-mobile">
+			<div class="footer">
+				<ul class="footer-content flex-sb">
+					<li><h5>Brock Donaldson © 2017</h5></li>
 			</div>
+		</div>
 
 	</div>
 
