--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div class="container">
 
-					<!-- Header (Desktop)
+			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
 			<div class="header-desktop">
 				<ul class="header-content flex-header">
@@ -79,5 +79,21 @@
 		</div>
 
 	</div>
+
+	<script src="js/jquery.min.js"></script>
+ <script>
+
+ 	$(document).ready(function() {
+  var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
+  $.getJSON(url, function(data) {
+    var artist = data.recenttracks.track[0].artist["#text"];
+    var song = data.recenttracks.track[0]["name"];
+
+    $('.song-title').html(""+song+" \ ");
+    $('.song-artist').html("– " +artist+"\ ");
+
+  });
+});
+</script>
 
 </body>
