--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -180,10 +180,10 @@
 				<div class="pull-tech-color flex-center">
 					<div class="pull-tech-img flex-sb">
 						<div class="image-double">
-							<img src="images/Kitsuneboard2.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneBoard2.png" alt="Kitsune Board Grip Close Up">
 						</div>
 						<div class="image-double">
-							<img src="images/Kitsuneboard3.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneBoard3.png" alt="Kitsune Board Grip Close Up">
 						</div>
 					</div>
 				</div>
