--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<!-- Header (Mobile)
 			––––––––––––––––––––––––––––––-->
-				<div class="header-mobile">
+			<div class="header-mobile">
 				<ul class="header-content flex-header">
 					<li>Brock Donaldson</li>
 					<div class="social">
@@ -56,24 +56,117 @@
 				</div>
 			</div>
 
+			<div class="intro-mobile flex-header">
+				<div class="intro-mobile-text">
+					<h2>Hey,<br> I'm Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
+				</div>
+			</div>
+
 			<!-- Projects
 			––––––––––––––––––––––––––––––-->
 
-			<div class="project-container">
-				<div class="project-content">
+			<div class="project-container flex-center ">
+				<div class="project-content flex-sb">
 					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
+						<object type="image/svg+xml" data="images/KitsuneBoardHome.svg"> Kitsune Board </object>
 					</div>
 					<div class="project-text">
-						<h4>case study</h4><h2><a class="underline" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
+						<h4>case study</h4><h2><a class="underline underline-blue" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune Board</a></h2>
 					</div>
 				</div>
 			</div>
 
+			<div class="project-container flex-center ">
+				<div class="project-content flex-sb">
+					<div class="project-image">
+						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
+					</div>
+					<div class="project-text">
+						<h4>case study</h4><h2><a class="underline underline-red" href="kitsuneBoard.html"> Vita App</a></h2>
+					</div>
+				</div>
+			</div>
+
+			<!-- About
+			––––––––––––––––––––––––––––––-->
+
+			<div class="about-container flex-center">
+				<div class="about-content">
+
+					<h2> Houston? </h2>
+					<p>I’m Brock, a designer, space enthusiest, and advocate Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus venenatis justo ac efficitur consectetur. Sed posuere quam at sagittis rutrum. Nullam diam nisi, blandit tempor erat at, lobortis lobortis neque. Donec ligula leo, sodales nec enim eu, lacinia luctus sapien. Nam libero purus, egestas condimentum bibendum malesuada, pharetra nec nisi. </p>
+					<p>Sed viverra volutpat purus. Mauris non urna non risus porttitor lacinia at ut tortor. Suspendisse potenti. Maecenas accumsan accumsan neque, in pretium est. Vestibulum ante ipsum primis in <a href="mailto:brockmdonaldson@gmail.com">brockmdonaldson@gmail.com</a> et ultrices posuere cubilia Curae; </p>
+					<div class="social-about">
+						<ul class="social-links">
+							<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+							<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/brockdonaldson" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.twitter.com/donaldsonbrock" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						</ul>
+					</div>
+
+					<div class="recommendations-container flex-sb-links">
+						<div class="reco-title">
+							<h4> [WATCH IT] </h4>
+						</div>
+						<div class="reco-list flex-sb-links">
+							<div class="recommendations">
+								<ul class="reco-links">
+									<li><a href="http://www.imdb.com/title/tt1478338" target="_blank"> // Bridesmaids </a></li>
+									<li><a href="http://www.imdb.com/title/tt2395695" target="_blank"> // Cosmos </a></li>
+									<li><a href="http://www.imdb.com/title/tt1570728" target="_blank"> // Crazy Stupid Love </a></li>
+									<li><a href="http://www.imdb.com/title/tt1282140" target="_blank"> // Easy A </a></li>
+									<li><a href="http://www.imdb.com/title/tt1798709" target="_blank"> // Her </a></li>
+									<li><a href="http://www.imdb.com/title/tt0813715" target="_blank"> // Heroes (S1 & 2) </a></li>
+								</ul>
+							</div>
+							<div class="recommendations">
+								<ul class="reco-links">
+									<li><a href="http://www.imdb.com/title/tt4846340" target="_blank"> // Hidden Figures </a></li>
+									<li><a href="http://www.imdb.com/title/tt0102057" target="_blank"> // Hook </a></li>
+									<li><a href="http://www.imdb.com/title/tt0433400" target="_blank"> // Just Friends </a></li>
+									<li><a href="http://www.imdb.com/title/tt0458352" target="_blank"> // The Devil Wears Prada </a></li>
+									<li><a href="http://www.imdb.com/title/tt0119116" target="_blank"> // The Fifth Element </a></li>
+									<li><a href="http://www.imdb.com/title/tt0157246" target="_blank"> // Will & Grace </a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="recommendations-container flex-sb-links">
+						<div class="reco-title">
+							<h4> [READ IT] </h4>
+						</div>
+						<div class="reco-list flex-sb-links">
+							<div class="recommendations">
+								<ul class="reco-links">
+									<li><a href="http://www.imdb.com/title/tt1478338" target="_blank"> // Creative Confidence </a></li>
+									<li><a href="http://www.imdb.com/title/tt2395695" target="_blank"> // Design of Everyday Things </a></li>
+									<li><a href="http://www.imdb.com/title/tt1570728" target="_blank"> // Physics of the Impossible</a></li>
+									<li><a href="http://www.imdb.com/title/tt1282140" target="_blank"> // Ready Player One </a></li>
+									<li><a href="http://www.imdb.com/title/tt1798709" target="_blank"> // The Martian </a></li>
+									<li><a href="http://www.imdb.com/title/tt0813715" target="_blank"> // The Time Keeper </a></li>
+								</ul>
+							</div>
+							<div class="recommendations">
+								<ul class="reco-links">
+									<li><a href="http://www.imdb.com/title/tt4846340" target="_blank"> // Hidden Figures </a></li>
+									<li><a href="http://www.imdb.com/title/tt0102057" target="_blank"> // Hook </a></li>
+									<li><a href="http://www.imdb.com/title/tt0433400" target="_blank"> // Just Friends </a></li>
+									<li><a href="http://www.imdb.com/title/tt0458352" target="_blank"> // The Devil Wears Prada </a></li>
+									<li><a href="http://www.imdb.com/title/tt0119116" target="_blank"> // The Fifth Element </a></li>
+									<li><a href="http://www.imdb.com/title/tt0157246" target="_blank"> // Will & Grace </a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
 
 
 
-
+	<!-- Closing Frame Divs
+			––––––––––––––––––––––––––––––-->
+			</div>
 
 
 		</div>
@@ -88,12 +181,17 @@
   $.getJSON(url, function(data) {
     var artist = data.recenttracks.track[0].artist["#text"];
     var song = data.recenttracks.track[0]["name"];
+    var player = artist + song;
 
-    $('.song-title').html(""+song+" \ ");
-    $('.song-artist').html("– " +artist+"\ ");
+    	if (window.innerWidth < 900 && player.length > 35) {
+    		song = song.substring (0,20)+"…";
+    	}
+    		$('.song-title').html(""+song+" \ ");
+   			$('.song-artist').html("– " +artist+"\ ");
 
   });
 });
+
 </script>
 
 </body>
