--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -54,8 +54,10 @@
 			––––––––––––––––––––––––––––––-->
 
 			<div class="project-header">
-				<div class="project-img">
-						<object type="image/svg+xml" data="images/KitsuneBoardHeader.svg"> Kitsune Board Outline </object>
+				<div class="project-header-img-container">
+					<div class="project-header-img">
+							<object type="image/svg+xml" data="images/KitsuneBoardHeader.svg"> Kitsune Board Outline </object>
+					</div>
 				</div>
 				<h1 class="project-title">The Kitsune Board</h1>
 				<div class="project-colour"></div>
