--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
 						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
 					</div>
 					<div class="project-text">
-						<h4>case study</h4><h2><a class="underline underline-red" href="kitsuneBoard.html"> Vita App</a></h2>
+						<h4>case study</h4><h2><a class="underline underline-red" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
+					</div>
+				</div>
+			</div>
+
+			<div class="project-container flex-center ">
+				<div class="project-content flex-sb">
+					<div class="project-image">
+						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
+					</div>
+					<div class="project-text">
+						<h4>case study</h4><h2><a class="underline underline-red" href="http://www.terrestriial.tumblr.com" target="_blank">Vita App</a></h2>
 					</div>
 				</div>
 			</div>
