--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<div class="site-frame">
+	<div class="site-frame-home">
 
 		<div class="container">
 
@@ -52,51 +52,42 @@
 
 			<div class="intro flex-header">
 				<div class="intro-text">
-					<h2>Hey, I'm Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
+					<h2>Hey. I’m Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
 				</div>
 			</div>
 
 			<div class="intro-mobile flex-header">
 				<div class="intro-mobile-text">
-					<h2>Hey,<br> I'm Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
+					<h2>Hey.<br> I’m Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
 				</div>
 			</div>
 
 			<!-- Projects
 			––––––––––––––––––––––––––––––-->
 
-			<div class="project-container flex-center ">
+
+			<div class="project-container flex-center">
 				<div class="project-content flex-sb">
-					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneBoardHome.svg"> Kitsune Board </object>
+				<div class="project-image">
+						<object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object>
 					</div>
-					<div class="project-text">
+					<div class="project-text flex-sb">
+						<h4>case study</h4><h2><a class="underline underline-yellow" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
+					</div>
+				</div>
+			</div>
+
+			<div class="project-container flex-center">
+				<div class="project-content flex-sb">
+				<div class="project-image">
+						<object type="image/svg+xml" data="images/KitsuneBoardHomeV2.svg"> Kitsune Board </object>
+					</div>
+					<div class="project-text flex-sb">
 						<h4>case study</h4><h2><a class="underline underline-blue" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune Board</a></h2>
 					</div>
 				</div>
 			</div>
 
-			<div class="project-container flex-center ">
-				<div class="project-content flex-sb">
-					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
-					</div>
-					<div class="project-text">
-						<h4>case study</h4><h2><a class="underline underline-red" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
-					</div>
-				</div>
-			</div>
-
-			<div class="project-container flex-center ">
-				<div class="project-content flex-sb">
-					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneAppHome.svg"> Kitsune App </object>
-					</div>
-					<div class="project-text">
-						<h4>case study</h4><h2><a class="underline underline-red" href="http://www.terrestriial.tumblr.com" target="_blank">Vita App</a></h2>
-					</div>
-				</div>
-			</div>
 
 			<!-- About
 			––––––––––––––––––––––––––––––-->
