--- a/index.html
+++ b/index.html
@@ -68,26 +68,27 @@
 
 			<div class="project-container flex-center">
 				<div class="project-content flex-sb">
-				<div class="project-image">
+					<div class="project-image">
 						<object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object>
 					</div>
-					<div class="project-text flex-sb">
+					<div class="project-text ">
 						<h4>case study</h4><h2><a class="underline underline-yellow" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
 					</div>
 				</div>
 			</div>
 
+<!--
 			<div class="project-container flex-center">
 				<div class="project-content flex-sb">
 				<div class="project-image">
 						<object type="image/svg+xml" data="images/KitsuneBoardHomeV2.svg"> Kitsune Board </object>
 					</div>
-					<div class="project-text flex-sb">
+					<div class="project-text">
 						<h4>case study</h4><h2><a class="underline underline-blue" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune Board</a></h2>
 					</div>
 				</div>
 			</div>
-
+-->
 
 			<!-- About
 			––––––––––––––––––––––––––––––-->
