--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -3,7 +3,7 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Brock Donaldson; Kitsune Board</title>
+  <title>Brock Donaldson; Kitsune App</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,7 +57,7 @@
 			<div class="project-header-master">
 				<div class="project-header-image-container">
 					<div class="project-header-image">
-							<object type="image/svg+xml" data="images/KitsuneBoardHeader.svg"> Kitsune Board Outline </object>
+							<object type="image/svg+xml" data="images/KitsuneAppHeader.svg"> Kitsune App Outline </object>
 					</div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 			<div class="highlight-colour-project blue"></div>
 
 			<div class="project-header">
-				<h1 class="project-title">The Kitsune Board</h1>
+				<h1 class="project-title">The Kitsune App</h1>
 			</div>
 
 
@@ -76,18 +76,23 @@
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[CHALLENGE]</h4>
-					<h2> To find an effective and alternative solution to urban transportation through an engaging, user connected product. </h2>
+					<h2> To create a product that allows users to  track their daily commute, while focusing on understanding health and fitness trends that arise through alternative transportation.  </h2>
 				</div>
 			</div>
 
-			<!-- Board Parallax
+			<!-- Gradient Pull Quote
 			––––––––––––––––––––––––––––––-->
 
-			<div class="spacer s0" id="trigger"></div>
 			<div class="section-full flex-center">
-				<div class="medium-container">
-					<img class="skateboard-render" src="images/parallax/brock_v1_01.png" alt="Skateboard Render">
-					<img class="skateboard-render-static" src="images/parallax/brock_v1_01.png" alt="Skateboard Render">
+				<div class="gradient-section gradient-blue flex-center">
+					<div class="pull-tech  flex-sb">
+						<div class="pull-tech-drawing">
+							<object type="image/svg+xml" data="images/KitsuneBoardTech1.svg"> Kitsune App Technical Drawing (Folding) </object>
+						</div>
+						<div class="pull-tech-text white">
+							<h2> Using the app is as simple as connecting to the board and downloading a recent trip. </h2>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -96,7 +101,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>The Kitsune Board is intended to bring forth a change in the way we see commuting. Going from point A to point B needs to become a positive, health concious experience. I investigated how we can create a vehicle representing both social and environmental change, but at the same time allow everyone to enjoy an easier, more environmentally conscious commute.</p>
+					<p>Through the Kitsune app you are able to track your most used routes, trip efficiency, and fitness. The smartwatch capability allows for ease of use while riding; providing the user with visualized trip information such as estimated arrival time, current trip location, and map view.</p>
 				</div>
 			</div>
 
